added example as amp-iframe

--- a/examples/taboola.amp.html
+++ b/examples/taboola.amp.html
@@ -258,7 +258,7 @@
                       sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"
                       layout="responsive"
                       frameborder="0"
-                      src="https://cdn.taboola.com/static/5f/5f3ba3ab-f791-450d-b9f2-7d2e072d1dcc.html?publisher=">
+                      src="https://cdn.taboola.com/static/a6/a6c104cd-d181-4e74-9a75-d4773a302a5f.html?publisher=bloomberg&mode=thumbnails-d&article=auto&url=http%3A%2F%2Fwww.bloomberg.com%2Fnews%2Farticles%2F2015-12-10%2Fronaldo-and-beckham-s-millions-start-with-this-unknown-belgian&placement=Below%20Article%20Thumbnails">
           </amp-iframe>
 
           <p>
