--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -120,5 +120,14 @@
       type="doubleclick"
       data-slot="/35096353/amptesting/badvideoad">
     </amp-ad>
+
+  <h2>A9 as amp-embed</h2>
+  <amp-embed width=300 height=250
+      type="a9"
+      data-aax_size="300x250"
+      data-aax_pubname="test123"
+      data-aax_src="302">
+  </amp-embed>
+
 </body>
 </html>
