--- a/test/manual/amp-ad.amp.html
+++ b/test/manual/amp-ad.amp.html
@@ -33,5 +33,11 @@
       type="adsense"
       data-ad-client="ca-pub-9350112648257122">
   </amp-ad>
+    <amp-embed width=300 height=250
+      type="a9"
+      data-aax_size="300x250"
+      data-aax_pubname="abc123"
+      data-aax_src="302">
+  </amp-embed>
 </body>
 </html>
