fixed dvoytenko remarks

--- a/examples/article.amp.html
+++ b/examples/article.amp.html
@@ -229,6 +229,7 @@
           <div class="ad-container">
             <amp-ad width=300 height=250
                 type="a9"
+
                 data-aax_size="300x250"
                 data-aax_pubname="abc123"
                 data-aax_src="302">
@@ -272,11 +273,12 @@
                 src="img/sea@1x.jpg"
                 srcset="img/sea@1x.jpg 1x, img/sea@2x.jpg 2x"
                 layout="responsive" width="360"
+                heights="(max-width: 30em) 150%, (max-width: 50em) 100%, 40%"
                 alt="Fusce pretium tempor justo, vitae consequat dolor maximus eget."
                 height="216">
             </amp-img>
             <figcaption>
-              Fusce pretium tempor justo, vitae consequat dolor maximus eget.
+              Eff Fusce pretium tempor justo, vitae consequat dolor maximus eget.
             </figcaption>
           </figure>
           <hr>
